--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @task.title %></h1>
 <br>
-<%= link_to 'Edit this task', task_edit_path %>
+<%= link_to 'Edit this task', edit_task_path %>
 <br>
 <p><%= @task.details %></p>
 <p>
