--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit the task: <%= @task.title %></h1>
 
-<form action="/tasks/<%= @task.id %>" method="post">
+<!-- <form action="/tasks/<%= @task.id %>" method="post">
   <input name="_method" type="hidden" value="patch" />
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
@@ -15,3 +15,6 @@
 
   <input type="submit">
 </form>
+ -->
+
+ <%= render 'form', task: @task %>
