--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,8 @@
 <h1>Add a task</h1>
 
-<form action="/tasks" method="post">
+ <%= render 'form', task: @task %>
+
+<!-- <form action="/tasks" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <label for="title">Task title: </label>
   <input type="text" name="task[title]" id="title">
@@ -9,4 +11,4 @@
   <input type="text" name="task[details]" id="details">
 
   <input type="submit">
-</form>
+</form> -->
